# datadriven

./: .gitignore  docker-compose.yml  render.yaml  start.sh
backend/: fitted_ratings.json  pyproject.toml
backend/app/: main.py  state.py
backend/app/api/: bracket.py  insights.py  knockout.py  live.py  players.py  prematch.py  qualification.py  scenario.py  standings.py
backend/app/data/: cache.py  elo.py  espn_scoreboard.py  fbref.py  metadata.py  odds_api.py  openfootball.py  results_history.py  transfermarkt.py
backend/app/models/: backtest.py  dixon_coles.py  fit_dixon_coles.py  market.py  ratings.py  talent.py
backend/app/simulation/: aggregator.py  engine.py  group_stage.py  knockout.py  players.py  third_place.py  third_place_allocation.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: GoalToasts.tsx  GroupTable.tsx  NavBar.tsx  ScorelineHeatmap.tsx  TeamSelect.tsx
frontend/src/hooks/: useLiveStream.ts
frontend/src/lib/: FlagImg.tsx  api.ts  flags.ts  types.ts
frontend/src/pages/: About.tsx  Awards.tsx  Bracket.tsx  Dashboard.tsx  FinalMatchups.tsx  Groups.tsx  Knockout.tsx  Match.tsx  Matches.tsx  Movers.tsx  Path.tsx  Road.tsx  Scenario.tsx
