[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.14.1",
    "aiosqlite>=0.22.1",
    "apscheduler<4",
    "beautifulsoup4>=4.15.0",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "lxml>=6.1.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "scipy>=1.17.1",
    "sse-starlette>=3.4.5",
    "uvicorn[standard]>=0.49.0",
]
